<resources>
    <string name="app_name">M线设备监控</string>
    <string name="weld">超声波焊接机</string>
    <string name="perfusion_machine">灌注机</string>
    <string name="foaming_machine">箱体发泡机</string>
    <!-- 超声波焊接机信息 -->
    <string name="device_name">设备名称:</string>
    <string name="post">岗位:</string>
    <string name="pre_step">前置工序:</string>
    <string name="af_step">后置工序:</string>
    <string name="equip_status">设备状态:</string>

    <!-- 检修-->
    <string name="check_plan">检修计划:</string>
    <string name="check_time">检修时间:</string>
    <string name="check_content">检修内容:</string>

    <!-- 检修测试数据-->
    <string name="check_plan_value">无</string>
    <string name="check_time_value">无</string>
    <string name="check_content_value">无</string>

    <string name="product_number">产品号:</string>
    <string name="order_number">订单号:</string>
    <string name="step">工序:</string>

    <string name="material_code">物料代码:</string>
    <string name="material_name">物料名称:</string>
    <string name="material_specification">物料规格:</string>
    <string name="supplier">供应商:</string>
    <string name="fitters">装配工:</string>
    <string name="inspection_station">检测工:</string>
    <string name="results">质检结果:</string>
    <string name="device_number">设备号:</string>

    <string name="tube_code">管子编码：</string>
    <string name="tube_diameter">管子直径：</string>
    <string name="tube_thick">管子壁厚：</string>
    <string name="counter">计数器：</string>

    <string name="weld_thick">焊接壁厚：</string>
    <string name="weld_time">焊接时间：</string>
    <string name="weld_power">焊接能量：</string>

    <string name="thick_unit">mm</string>
    <string name="time_unit">s</string>
    <string name="power_unit">Ws</string>

    <string name="update">刷新</string>
</resources>
